$Id: Changelog.txt,v 1.19 2011/07/30 13:16:22 nanard Exp $

2011/10/07:
	unlink unix socket before binding.

VERSION 1.1:

2011/07/30:
	fixes. More overflow checks

2011/07/29:
	added a lot of buffer overflow checks. Check malloc() failure, etc.
	Better cleanup in case of crash at start.
	network interface watch to add/drop multicast membership when the interface get live.

2011/06/18:
	Starting to add support for UPnP Device Architecture v1.1

2011/05/23:
	Added IPv6 support.
	-i option now understands interface names as well as addresses.

VERSION 1.0:

2008/10/07:
	added codelength.h
	Fixing response to M-SEARCH
	Doc update

2008/10/06:
	UPnP server support (answering M-SEARCH)

2008/10/04:
	listening on several interfaces.

2008/10/01:
	use of daemon() instead of home made daemonize.

2007/12/19:
	added uuid in responses
	3 types of requests supported.
	preventing buffer overflow

2007/12/18:
	It is now possible to change the location of both pid file and
	unix socket.

2007/10/08:
	Added a man page

2007/09/27:
	Support for install in different location $ PREFIX=... make install

2007/09/23:
	added a script for use in /etc/init.d
	improved Makefile
	creating /var/run/minissdpd.pid
	adding synthetic messages for new devices/removed devices

2007/09/19:
	Take SSDP announce packets lifetime into account.
